Website and Social Media Data Entry.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -181,7 +181,7 @@
           <div class="panel-group" id="accordion-panel">
             <div class="panel panel-default">
               <div class="panel-heading">
-                <i class="fa-angle-down fa"></i>
+                <i class="fa-angle-up fa"></i>
                 <h4 class="panel-title">
                   <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion-panel" href="#collapseThreePanel">
                     What is Scruby? </a>
@@ -198,7 +198,7 @@
             </div>
             <div class="panel panel-default">
               <div class="panel-heading">
-                <i class="fa-angle-up fa"></i>
+                <i class="fa-angle-down fa"></i>
                 <h4 class="panel-title">
                   <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion-panel" href="#collapseOnePanel">
                     What tools, libraries or frameworks your site would be using for our project?
@@ -218,7 +218,7 @@
                 <i class="fa-angle-down fa"></i>
                 <h4 class="panel-title">
                   <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion-panel" href="#collapseTwoPanel">
-                    How can I prevent my Scrapy bot from getting banned? </a>
+                    How can you prevent your Scrapy bot from getting banned? </a>
                 </h4>
               </div>
               <div id="collapseTwoPanel" class="panel-collapse collapse">
