Website and Social Media Data Entry.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -237,13 +237,12 @@
                 <i class="fa-angle-down fa"></i>
                 <h4 class="panel-title">
                   <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion-panel" href="#collapseFourPanel">
-                    What design files format do Codly supports? </a>
+                    We need to crawl a site every week? </a>
                 </h4>
               </div>
               <div id="collapseFourPanel" class="panel-collapse collapse">
                 <div class="panel-body">
-                  <p>Currently Codly supports Adobe Photoshop format, but we are planning to support other format as
-                    Sketch and Illustrator file types.</p>
+                  <p>Of course, No problem. We can crawl the site and send the data to your email every week.</p>
                 </div>
               </div>
             </div>
