Website and Social Media Data Entry.

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -10,7 +10,7 @@
         </div>
       </div>
       <div class="dropdown" dropdown_selector=".course-dropdown-menu" menu_dropdown="">
-        <span>Showcases</span>
+        <span>Programs</span>
         <div class="course-dropdown-menu">
           <div class="inner">
             <div class="course-links">
@@ -18,7 +18,7 @@
                 <div class="label">Become a Software Engineer</div>
                 <ul>
                   <li class="course-icon-link web-track">
-                    <a href="/software-engineering-track"><i class="fa fa-tasks fa-fw"></i>
+                    <a href="https://www.bloc.io/software-engineering-track"><i class="fa fa-tasks fa-fw"></i>
                       Software Engineering Track
                     </a></li>
                 </ul>
@@ -27,7 +27,7 @@
                 <div class="label">Become a Junior Web Developer</div>
                 <ul>
                   <li class="course-icon-link web-track">
-                    <a href="/web-developer-career-track"><i class="fa fa-desktop fa-fw"></i>
+                    <a href="https://www.bloc.io/web-developer-career-track"><i class="fa fa-desktop fa-fw"></i>
                       Full Stack Web Developer Track
                     </a></li>
                 </ul>
@@ -36,7 +36,7 @@
                 <div class="label">Become a Product Designer</div>
                 <ul>
                   <li class="course-icon-link web-track">
-                    <a href="/product-design-bootcamp"><i class="fa fa-picture-o fa-fw"></i>
+                    <a href="https://www.bloc.io/product-design-bootcamp"><i class="fa fa-picture-o fa-fw"></i>
                       Product Design Track
                     </a></li>
                 </ul>
@@ -45,23 +45,23 @@
                 <div class="label">Broaden Your Skills</div>
                 <ul>
                   <li class="course-icon-link web-dev">
-                    <a href="/web-development-bootcamp"><i class="fa fa-terminal fa-fw"></i>
+                    <a href="https://www.bloc.io/web-development-bootcamp"><i class="fa fa-terminal fa-fw"></i>
                       Rails Web Development Course
                     </a></li>
                   <li class="course-icon-link frontend">
-                    <a href="/frontend-development-bootcamp"><i class="fa fa-code fa-fw"></i>
+                    <a href="https://www.bloc.io/frontend-development-bootcamp"><i class="fa fa-code fa-fw"></i>
                       Frontend Web Development Course
                     </a></li>
                   <li class="course-icon-link design">
-                    <a href="/ux-design-bootcamp"><i class="fa fa-picture-o fa-fw"></i>
+                    <a href="https://www.bloc.io/ux-design-bootcamp"><i class="fa fa-picture-o fa-fw"></i>
                       UX/UI Design Course
                     </a></li>
                   <li class="course-icon-link android">
-                    <a href="/android-bootcamp"><i class="fa fa-android fa-fw"></i>
+                    <a href="https://www.bloc.io/android-bootcamp"><i class="fa fa-android fa-fw"></i>
                       Android Development Course
                     </a></li>
                   <li class="course-icon-link ios">
-                    <a href="/ios-bootcamp"><i class="fa fa-apple fa-fw"></i>
+                    <a href="https://www.bloc.io/ios-bootcamp"><i class="fa fa-apple fa-fw"></i>
                       iOS Development Course
                     </a></li>
                 </ul>
