Website and Social Media Data Entry.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -187,7 +187,7 @@
                     What is Scruby? </a>
                 </h4>
               </div>
-              <div id="collapseThreePanel" class="panel-collapse collapse">
+              <div id="collapseThreePanel" class="panel-collapse collapse in">
                 <div class="panel-body">
                   <p>
                     Scruby is a smart downloader designed specifically for web crawling and scraping.
@@ -205,7 +205,7 @@
                     </a>
                 </h4>
               </div>
-              <div id="collapseOnePanel" class="panel-collapse collapse in">
+              <div id="collapseOnePanel" class="panel-collapse collapse">
                 <div class="panel-body">
                   <p>Scrapy is an application framework for crawling web sites and extracting structured data which can be used for a wide range of useful applications, like data mining, information processing or historical archival.</p>
                   <p>This site scruby, built with ruby on rails. Support for exporting to excel automatically.</p>
@@ -251,12 +251,12 @@
                 <i class="fa-angle-down fa"></i>
                 <h4 class="panel-title">
                   <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion-panel" href="#collapseFivePanel">
-                    Do I need to use Photoshop? </a>
+                    Your price is too high? </a>
                 </h4>
               </div>
               <div id="collapseFivePanel" class="panel-collapse collapse">
                 <div class="panel-body">
-                  <p>Yes, you need to use Photoshop as you need to use our Photoshop plugin to publish your design.</p>
+                  <p>No. so inexpensive. Not like other paid website. Scruby supports low price and high quality.</p>
                 </div>
               </div>
             </div>
