Website and Social Media Data Entry.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -256,7 +256,7 @@
               </div>
               <div id="collapseFivePanel" class="panel-collapse collapse">
                 <div class="panel-body">
-                  <p>No. so inexpensive. Not like other paid website. Scruby supports low price and high quality.</p>
+                  <p>No. so inexpensive. Not like other paid website, Scruby is low price and high quality.</p>
                 </div>
               </div>
             </div>
@@ -265,13 +265,14 @@
                 <i class="fa-angle-down fa"></i>
                 <h4 class="panel-title">
                   <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion-panel" href="#collapseSixPanel">
-                    What version of Adobe Photoshop is supported? </a>
+                    How do I contact you? </a>
                 </h4>
               </div>
               <div id="collapseSixPanel" class="panel-collapse collapse">
                 <div class="panel-body">
-                  <p>Currently we only support Adobe Photoshop CS6, CC 14.2.</p>
-                  <p>We are going to support Adobe Photoshop CC 2014 very soon.</p>
+                  <p>If you need further assistance, please contact one of our customer service specialists:</p>
+                  <p>By email, at trujunzhang@gmail.com</p>
+                  <p>By clicking on the Contact Us link at the footer of homepage of our website.</p>
                 </div>
               </div>
             </div>
@@ -280,12 +281,13 @@
                 <i class="fa-angle-down fa"></i>
                 <h4 class="panel-title">
                   <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion-panel" href="#collapseSevenPanel">
-                    Can I use the generated code in my final mobile app? </a>
+                    Can I use  Scruby in my mobile phone? </a>
                 </h4>
               </div>
               <div id="collapseSevenPanel" class="panel-collapse collapse">
                 <div class="panel-body">
-                  <p>Yes, the generated code is intended to be used in the final and working mobile app.</p>
+                  <p>Yes, Scruby is a Responsive, Mobile-Friendly Website.</p>
+                  <p>You can use mobile web browser to browse it.</p>
                 </div>
               </div>
             </div>
