Website and Social Media Data Entry.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -297,91 +297,6 @@
     </div>
   </section>
 
-
-  <!-- footer -->
-  <footer class="footer">
-    <div class="container">
-
-      <div class="row">
-        <div class="col-md-7">
-          <div class="copyright">
-            <a href="#home" class="ft-logo" >
-              <img src="/assets/logo-large.png" alt="14" pagespeed_url_hash="1416770860">
-            </a>
-            <div class="copy-text">
-              <a href="javascript:void(0);" data-toggle="modal" data-target="#myModal" title="Contact Us">Contact Us</a>
-              <h style="color: gray">
-                - 506 dong 405 shi, shanghai, Jiang su sheng, Egypt.
-              </h>
-              <br>
-              <small style="color: grey">&copy; 2016 Scruby Inc. | All Rights Reserved</small>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-5">
-          <div class="ft-social">
-            <div class="social">
-              <ul>
-                <li>
-                  <a class="tip" data-toggle="tooltip" href="http://twitter.com/trujunzhang" title="Twitter">
-                    <i class="fa fa-twitter"></i>
-                  </a>
-                </li>
-                <li>
-                  <a class="tip" data-toggle="tooltip" href="https://cn.linkedin.com/in/trujunzhang" title="Linkedin">
-                    <i class="fa fa-linkedin"></i>
-                  </a>
-                </li>
-                <li>
-                  <a class="tip" data-toggle="tooltip" href="https://www.facebook.com/zhang.trujun.5" title="Facebook">
-                    <i class="fa fa-facebook"></i>
-                  </a>
-                </li>
-                <li>
-                  <a class="tip" data-toggle="tooltip" href="https://plus.google.com/u/0/101799459276785948188" title="Google plus">
-                    <i class="fa fa-google-plus"></i>
-                  </a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </footer>
-
-
-  <!-- Modal with contact form -->
-  <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span>
-            <span class="sr-only">Close</span>
-          </button>
-          <h4 class="modal-title" id="myModalLabel">Contact Us</h4>
-        </div>
-        <div class="modal-body">
-          <form role="form" class="form" method="post" id="contactForm" action="application/contact">
-            <div class="form-group">
-              <label for="visiterName">Name <sup>*</sup></label>
-              <input type="text" class="form-control input-xl" id="visiterName" name="name" placeholder="Full Name">
-            </div>
-            <div class="form-group">
-              <label for="visiterEmail">Email <sup>*</sup></label>
-              <input type="email" class="form-control input-xl" id="visiterEmail" name="email" placeholder="Email">
-            </div>
-            <div class="form-group">
-              <label for="visiterMessage">Message <sup>*</sup></label>
-              <textarea class="form-control" id="visiterMessage" name="message" rows="5"></textarea>
-            </div>
-            <input type="submit" class="btn btn-primary btn-xl btn-block" id="send" value="Send Message">
-          </form>
-          <div id="response"></div>
-        </div>
-      </div>
-    </div>
-  </div>
-
+  <%= render 'layouts/footer' %>
 
 </div>
