Website and Social Media Data Entry.

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -270,7 +270,7 @@ Partnership / Corporate Inquiries?
 
           </div>
           <div class="copyright">
-            COPYRIGHT © 2016 SCRABY
+            COPYRIGHT © 2016 SCRUBY
           </div>
         </div>
       </div>
