--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -14,7 +14,7 @@
               - 506 dong 405 shi, shanghai, Jiang su sheng, Egypt.
             </h>
             <br>
-            <small style="color: grey">&copy; 2016 Scruby Inc. | All Rights Reserved</small>
+            <small style="color: grey">&copy; 2016 SCRUBY Inc. | All Rights Reserved</small>
           </div>
         </div>
       </div>
