--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -9,7 +9,7 @@
             <img src="/assets/logo-large.png" alt="14" pagespeed_url_hash="1416770860">
           </a>
           <div class="copy-text">
-            <a href="javascript:void(0);" data-toggle="modal" data-target="#myModal" title="Contact Us">Contact Us</a>
+            <a href="mailto:trujunzhang@gmail.com" target="_top" class="email">Contact Us</a>
             <h style="color: gray">
               - 506 dong 405 shi, shanghai, Jiang su sheng, Egypt.
             </h>
@@ -51,35 +51,5 @@
 </footer>
 
 
-<!-- Modal with contact form -->
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span>
-          <span class="sr-only">Close</span>
-        </button>
-        <h4 class="modal-title" id="myModalLabel">Contact Us</h4>
-      </div>
-      <div class="modal-body">
-        <form role="form" class="form" method="post" id="contactForm" action="application/contact">
-          <div class="form-group">
-            <label for="visiterName">Name <sup>*</sup></label>
-            <input type="text" class="form-control input-xl" id="visiterName" name="name" placeholder="Full Name">
-          </div>
-          <div class="form-group">
-            <label for="visiterEmail">Email <sup>*</sup></label>
-            <input type="email" class="form-control input-xl" id="visiterEmail" name="email" placeholder="Email">
-          </div>
-          <div class="form-group">
-            <label for="visiterMessage">Message <sup>*</sup></label>
-            <textarea class="form-control" id="visiterMessage" name="message" rows="5"></textarea>
-          </div>
-          <input type="submit" class="btn btn-primary btn-xl btn-block" id="send" value="Send Message">
-        </form>
-        <div id="response"></div>
-      </div>
-    </div>
-  </div>
-</div>
+
 
