Website and Social Media Data Entry.

--- a/app/assets/stylesheets/_showcases.css.scss
+++ b/app/assets/stylesheets/_showcases.css.scss
@@ -6,6 +6,11 @@
     padding-bottom: 50px;
   }
 
+  .the-table {
+    table-layout: fixed;
+    word-wrap: break-word;
+  }
+
   #cases-table{
 
   }
