--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -12,6 +12,7 @@
         <th>Duration</th>
         <th>Price</th>
         <th>Status</th>
+        <th>Type</th>
         <th>Show</th>
       </tr>
       </thead>
@@ -32,6 +33,7 @@
             </td>
             <td><%= job.price %></td>
             <td><%= job.status %></td>
+            <td><%= job.jobtype %></td>
             <td>
               <%= link_to 'Show', job %>
             </td>
