--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -1,3 +1,5 @@
+<%= tinymce_assets %>
+
 <%= form_for(@job) do |f| %>
     <% if @job.errors.any? %>
         <div id="error_explanation">
@@ -25,7 +27,8 @@
     </div>
     <div class="field">
       <%= f.label :description %><br/>
-      <%= f.text_area :description %>
+      <%= f.text_area :description, :class => "tinymce", :rows => 40, :cols => 120 %>
+      <%= tinymce %>
     </div>
     <div class="field">
       <%= f.label :linkto %><br/>
