Website and Social Media Data Entry.

--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -25,7 +25,7 @@
               <% end %>
             </td>
             <td><%= job.customer %></td>
-            <td><%= job.description %></td>
+            <td><%=raw job.description %></td>
             <td>
               <%= job.startdate %>
               -
