--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -42,7 +42,7 @@
       <div>
         <b class="pull-left">Description:</b>
         <p>
-          <%= @job.description %>
+          <%=raw @job.description %>
         </p>
       </div>
       <div class="panel-body">
