Website and Social Media Data Entry.

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -138,14 +138,14 @@
         <div class="label">Become a Software Engineer</div>
         <ul class="link-list">
           <li>
-            <a href="/software-engineering-track"><i class="icon fa fa-tasks"></i>
+            <a href="https://www.bloc.io/software-engineering-track"><i class="icon fa fa-tasks"></i>
               Software Engineering Track
             </a></li>
         </ul>
         <div class="label">Become a Junior Web Developer</div>
         <ul class="link-list">
           <li>
-            <a href="/web-developer-career-track"><i class="icon fa fa-desktop fa-fw"></i>
+            <a href="https://www.bloc.io/web-developer-career-track"><i class="icon fa fa-desktop fa-fw"></i>
               Full Stack Web Developer Track
             </a></li>
         </ul>
@@ -154,23 +154,23 @@
         </div>
         <ul class="link-list">
           <li>
-            <a href="/web-development-bootcamp"><i class="icon icon-web-development"></i>
+            <a href="https://www.bloc.io/web-development-bootcamp"><i class="icon icon-web-development"></i>
               Rails Web Development Course
             </a></li>
           <li>
-            <a href="/frontend-development-bootcamp"><i class="icon icon-frontend"></i>
+            <a href="https://www.bloc.io/frontend-development-bootcamp"><i class="icon icon-frontend"></i>
               Frontend Web Development Course
             </a></li>
           <li>
-            <a href="/android-bootcamp"><i class="icon icon-android"></i>
+            <a href="https://www.bloc.io/android-bootcamp"><i class="icon icon-android"></i>
               Android Mobile Development Course
             </a></li>
           <li>
-            <a href="/ios-bootcamp"><i class="icon icon-ios"></i>
+            <a href="https://www.bloc.io/ios-bootcamp"><i class="icon icon-ios"></i>
               iOS Mobile Development Course
             </a></li>
           <li>
-            <a href="/ux-design-bootcamp"><i class="icon icon-design"></i>
+            <a href="https://www.bloc.io/ux-design-bootcamp"><i class="icon icon-design"></i>
               UX/UI Design Course
             </a></li>
         </ul>
