Website and Social Media Data Entry.

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -129,7 +129,7 @@
       <div class="list-group">
         <ul class="link-list">
           <li>
-            <a href="/enroll">Enroll</a>
+            <a href="/enroll">Sign in</a>
           </li>
           <li>
             <a href="/sign_in">Log in / Register</a>
