Website and Social Media Data Entry.

--- a/app/assets/stylesheets/_mobile-nav-container.css.scss
+++ b/app/assets/stylesheets/_mobile-nav-container.css.scss
@@ -256,3 +256,9 @@
 .mobile-nav-container .mobile-menu .mobile-subnav-list .list-group .footer .social-link-list-wrapper .social-link-list li {
   margin-right: 2.5rem
 }
+
+.social-link-list li {
+  list-style: none;
+  float: left;
+  margin-right: 18px;
+}
