Website and Social Media Data Entry.

--- a/app/assets/stylesheets/home/footer.css.scss
+++ b/app/assets/stylesheets/home/footer.css.scss
@@ -1,224 +1,226 @@
 
-/* footer */
-.footer {
-  background: #333333;
-  padding: 80px 0 40px;
-}
+#desktop-footer {
 
-.footer a, .footer h2, .footer .h2, .footer h3, .footer .h3, .footer h4,
-.footer .h4 {
-  color: #fff;
-}
+  /* footer */
+  .footer {
+    background: #333333;
+    padding: 80px 0 40px;
+  }
 
-.short-post .short-post-title {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  max-width: 100%;
-  font-weight: 400;
-  margin: 20px 0 5px;
-  text-align: center;
-}
+  .footer a, .footer h2, .footer .h2, .footer h3, .footer .h3, .footer h4,
+  .footer .h4 {
+    color: #fff;
+  }
 
-.short-post .post-meta {
-  font-size: 12px;
-  text-align: center;
-}
+  .short-post .short-post-title {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    max-width: 100%;
+    font-weight: 400;
+    margin: 20px 0 5px;
+    text-align: center;
+  }
 
-.short-post .post-meta:after {
-  clear: both;
-}
+  .short-post .post-meta {
+    font-size: 12px;
+    text-align: center;
+  }
 
-.short-post .post-meta:after, .short-post .post-meta:before {
-  display: table;
-  content: '';
-}
+  .short-post .post-meta:after {
+    clear: both;
+  }
 
-.short-post .post-meta span {
-  display: inline-block;
-  margin: 0 10px;
-}
+  .short-post .post-meta:after, .short-post .post-meta:before {
+    display: table;
+    content: '';
+  }
 
-.thumb {
-  position: relative;
-  display: block;
-  background: #111;
-}
+  .short-post .post-meta span {
+    display: inline-block;
+    margin: 0 10px;
+  }
 
-.thumb:after {
-  font-family: 'Pe-icon-7-stroke';
-  content: '\e618';
-  width: 40px;
-  height: 40px;
-  display: block;
-  font-size: 40px;
-  text-align: center;
-  line-height: 40px;
-  color: #fff;
-  position: absolute;
-  top: 40%;
-  left: 50%;
-  margin-left: -20px;
-  margin-top: -20px;
-  opacity: 0;
-  filter: alpha(opacity=0);
-}
+  .thumb {
+    position: relative;
+    display: block;
+    background: #111;
+  }
 
-.thumb img, .thumb:after {
-  -webkit-transition: all 0.5s ease-in-out;
-  -moz-transition: all 0.5s ease-in-out;
-  -ms-transition: all 0.5s ease-in-out;
-  -o-transition: all 0.5s ease-in-out;
-  transition: all 0.5s ease-in-out;
-}
+  .thumb:after {
+    font-family: 'Pe-icon-7-stroke';
+    content: '\e618';
+    width: 40px;
+    height: 40px;
+    display: block;
+    font-size: 40px;
+    text-align: center;
+    line-height: 40px;
+    color: #fff;
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    margin-left: -20px;
+    margin-top: -20px;
+    opacity: 0;
+    filter: alpha(opacity=0);
+  }
 
-.thumb:hover:after {
-  top: 50%;
-  opacity: 0.7;
-  filter: alpha(opacity=70);
-}
+  .thumb img, .thumb:after {
+    -webkit-transition: all 0.5s ease-in-out;
+    -moz-transition: all 0.5s ease-in-out;
+    -ms-transition: all 0.5s ease-in-out;
+    -o-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
+  }
 
-.thumb:hover img {
-  opacity: 0.6;
-  filter: alpha(opacity=60);
-}
+  .thumb:hover:after {
+    top: 50%;
+    opacity: 0.7;
+    filter: alpha(opacity=70);
+  }
 
-.footer hr {
-  border-color: #2b2b2b;
-}
+  .thumb:hover img {
+    opacity: 0.6;
+    filter: alpha(opacity=60);
+  }
 
-.footer .ft-hr {
-  margin: 40px 0;
-}
+  .footer hr {
+    border-color: #2b2b2b;
+  }
 
-.footer .ft-logo {
-  display: block;
-  float: left;
-  padding: 0 30px 0 0;
-  margin-right: 30px;
-  border-right: 1px solid #2b2b2b;
-}
+  .footer .ft-hr {
+    margin: 40px 0;
+  }
 
-.footer .ft-social .social {
-  text-align: right;
-}
+  .footer .ft-logo {
+    display: block;
+    float: left;
+    padding: 0 30px 0 0;
+    margin-right: 30px;
+    border-right: 1px solid #2b2b2b;
+  }
 
-.footer .ft-social .social ul li a .fa {
-  font-size: 26px;
-  height: 45px;
-  width: 45px;
-  line-height: 45px;
-  text-align: center;
-}
+  .footer .ft-social .social {
+    text-align: right;
+  }
 
-.footer .copyright:after {
-  clear: both;
-}
+  .footer .ft-social .social ul li a .fa {
+    font-size: 26px;
+    height: 45px;
+    width: 45px;
+    line-height: 45px;
+    text-align: center;
+  }
 
-.footer .copyright:after, .footer .copyright:before {
-  display: table;
-  content: '';
-}
+  .footer .copyright:after {
+    clear: both;
+  }
 
+  .footer .copyright:after, .footer .copyright:before {
+    display: table;
+    content: '';
+  }
 
-.social ul li a, .team .social ul li a:hover, .team .social ul li a:focus {
-  color: #fff;
-  text-decoration: none;
-}
+  .social ul li a, .team .social ul li a:hover, .team .social ul li a:focus {
+    color: #fff;
+    text-decoration: none;
+  }
 
-.social ul li a .fa {
-  font-size: 18px;
-  width: 30px;
-  height: 30px;
-  line-height: 30px;
-  display: block;
-  background: #de2525;
-  color: #fff;
-}
+  .social ul li a .fa {
+    font-size: 18px;
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
+    display: block;
+    background: #de2525;
+    color: #fff;
+  }
 
-.social ul li a .fa-twitter {
-  background: #29c5f6;
-}
+  .social ul li a .fa-twitter {
+    background: #29c5f6;
+  }
 
-.social ul li a .fa-linkedin {
-  background: #036fba;
-}
+  .social ul li a .fa-linkedin {
+    background: #036fba;
+  }
 
-.social ul li a .fa-facebook {
-  background: #3b5999;
-}
+  .social ul li a .fa-facebook {
+    background: #3b5999;
+  }
 
-.social ul li a .fa-google-plus {
-  background: #db4836;
-}
+  .social ul li a .fa-google-plus {
+    background: #db4836;
+  }
 
-.social ul li a .fa-pinterest {
-  background: #d01d15;
-}
+  .social ul li a .fa-pinterest {
+    background: #d01d15;
+  }
 
-.footer hr {
-  border-color: #2b2b2b;
-}
+  .footer hr {
+    border-color: #2b2b2b;
+  }
 
-.footer .ft-hr {
-  margin: 40px 0;
-}
+  .footer .ft-hr {
+    margin: 40px 0;
+  }
 
-.footer .ft-logo {
-  display: block;
-  float: left;
-  padding: 0 30px 0 0;
-  margin-right: 30px;
-  border-right: 1px solid #7a7a7a;
-}
+  .footer .ft-logo {
+    display: block;
+    float: left;
+    padding: 0 30px 0 0;
+    margin-right: 30px;
+    border-right: 1px solid #7a7a7a;
+  }
 
-.footer .ft-social .social {
-  text-align: right;
-}
+  .footer .ft-social .social {
+    text-align: right;
+  }
 
-.footer .ft-social .social ul li a .fa {
-  font-size: 26px;
-  height: 45px;
-  width: 45px;
-  line-height: 45px;
-  text-align: center;
-}
+  .footer .ft-social .social ul li a .fa {
+    font-size: 26px;
+    height: 45px;
+    width: 45px;
+    line-height: 45px;
+    text-align: center;
+  }
 
-.footer .copyright:after {
-  clear: both;
-}
+  .footer .copyright:after {
+    clear: both;
+  }
 
-.footer .copyright:after, .footer .copyright:before {
-  display: table;
-  content: '';
-}
+  .footer .copyright:after, .footer .copyright:before {
+    display: table;
+    content: '';
+  }
 
+  .social {
+    text-align: center;
+  }
 
-.social {
-  text-align: center;
-}
+  .social ul {
+    display: inline-block;
+    margin: 0;
+    padding: 0;
+  }
 
-.social ul {
-  display: inline-block;
-  margin: 0;
-  padding: 0;
-}
+  .social ul:after {
+    clear: both;
+  }
 
-.social ul:after {
-  clear: both;
-}
+  .social ul:after, .social ul:before {
+    display: table;
+    content: '';
+  }
 
-.social ul:after, .social ul:before {
-  display: table;
-  content: '';
-}
+  .social ul li {
+    display: block;
+    float: left;
+    list-style: none;
+  }
 
-.social ul li {
-  display: block;
-  float: left;
-  list-style: none;
-}
+  .team .social {
+    margin-top: 20px;
+  }
 
-.team .social {
-  margin-top: 20px;
 }
