Website and Social Media Data Entry.

--- a/app/assets/stylesheets/_mobile-nav-container.css.scss
+++ b/app/assets/stylesheets/_mobile-nav-container.css.scss
@@ -245,7 +245,8 @@
   border-style: solid;
   border-color: #4d4d4d;
   margin-bottom: 15px;
-  padding: 15px
+  padding: 15px 15px 40px;
+  text-align: center;
 }
 
 .mobile-nav-container .mobile-menu .mobile-subnav-list .list-group .footer .social-link-list-wrapper .social-link-list {
