Website and Social Media Data Entry.

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -211,44 +211,11 @@
         </ul>
       </div>
       <div class="list-group">
-        <div class="nav-email-form">
-          <div class="label no-border">
-            Sign Up For Our Mailing List
-          </div>
-          <form class="emelyn-form-elements ng-pristine ng-valid-email ng-invalid ng-invalid-required" id="nav_email_capture" name="nav_email_capture">
-            <div class="input-wrapper email">
-              <input class="input-dark ng-pristine ng-untouched ng-valid-email ng-invalid ng-invalid-required" id="email" name="email" ng_model="subscription.email" required="required" type="email">
-            </div>
-            <div class="input-wrapper submit">
-              <input class="btn btn-mini" id="nav_email_signup_btn" ng_click="submit()" ng_disabled="isSubmitDisabled()" type="submit" value="Send" disabled="disabled">
-            </div>
-          </form>
-        </div>
         <ul class="link-list">
           <li class="contact">
-            <a href="mailto:hello@bloc.io"><i class="icon fa fa-envelope-o fa-nav"></i>
-              hello@bloc.io
+            <a href="mailto:trujunzhang@gmail.com"><i class="icon fa fa-envelope-o fa-nav"></i>
+              trujunzhang@gmail.com
             </a>
-          </li>
-          <li class="contact">
-<span>
-<i class="icon fa fa-phone fa-nav"></i>
-<div class="contact-wrapper">
-Considering enrolling?
-<br>
-(404) 480-2562
-</div>
-</span>
-          </li>
-          <li class="contact">
-<span>
-<i class="icon fa fa-phone fa-nav"></i>
-<div class="contact-wrapper">
-Partnership / Corporate Inquiries?
-<br>
-(650) 741-5692
-</div>
-</span>
           </li>
         </ul>
         <div class="footer">
