Website and Social Media Data Entry.

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -222,16 +222,16 @@
           <div class="social-link-list-wrapper">
             <ul class="social-link-list">
               <li>
-                <a href="https://www.facebook.com/trybloc" target="_blank"><i class="fa fa-facebook"></i>
+                <a href="http://twitter.com/trujunzhang" target="_blank"><i class="fa fa-twitter"></i>
                 </a></li>
               <li>
-                <a href="https://twitter.com/trybloc" target="_blank"><i class="fa fa-twitter"></i>
+                <a href="https://cn.linkedin.com/in/trujunzhang" target="_blank"><i class="fa fa-linkedin"></i>
                 </a></li>
               <li>
-                <a href="https://plus.google.com/112610125572984281932" rel="publisher" target="_blank"><i class="fa fa-google-plus"></i>
+                <a href="https://www.facebook.com/zhang.trujun.5" target="_blank"><i class="fa fa-facebook"></i>
                 </a></li>
               <li>
-                <a href="https://www.youtube.com/user/BlocContent" target="_blank"><i class="fa fa-youtube"></i>
+                <a href="https://plus.google.com/u/0/101799459276785948188" rel="publisher" target="_blank"><i class="fa fa-google-plus"></i>
                 </a></li>
             </ul>
 
