Website and Social Media Data Entry.

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -178,35 +178,10 @@
       <div class="list-group">
         <ul class="link-list">
           <li>
-            <a href="/mentors">Mentors</a>
+            <a href="https://www.freelancer.com/u/wanghaofree720.html">Freelancer</a>
           </li>
           <li>
-            <a href="/alumni">Alumni</a>
-          </li>
-          <li>
-            <a href="/about">Our Team | Jobs</a>
-          </li>
-          <li>
-            <a href="http://try.bloc.io/dev-bootcamp-for-veterans/" target="_blank">Bloc Veterans Program</a>
-          </li>
-          <li>
-            <a href="http://try.bloc.io/new-relic-bootcamp-diversity-scholarship/" target="_blank">Bloc's Diversity
-              Scholarship</a>
-          </li>
-          <li>
-            <a href="/faq">FAQ</a>
-          </li>
-          <li>
-            <a href="http://blog.bloc.io">Blog</a>
-          </li>
-          <li>
-            <a href="http://code.bloc.io" target="_blank">Engineering Blog</a>
-          </li>
-          <li>
-            <a href="/privacy">Privacy Policy</a>
-          </li>
-          <li>
-            <a href="/terms">Terms of Service</a>
+            <a href="https://www.upwork.com/freelancers/~01acfe85619aeda9d8">Upwork</a>
           </li>
         </ul>
       </div>
