Website and Social Media Data Entry.

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -6,7 +6,7 @@
       <div class="col-md-7">
         <div class="copyright">
           <a href="#home" class="ft-logo" >
-            <img src="/assets/logo-large.png" alt="14" pagespeed_url_hash="1416770860">
+            <img src="/assets/logo-large.png" alt="14" style="width: 127px;height: 107px;">
           </a>
           <div class="copy-text">
             <a href="mailto:trujunzhang@gmail.com" target="_top" class="email">Contact Us</a>
