Website and Social Media Data Entry.

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -106,8 +106,9 @@
   <div class="mobile-nav-header">
     <div class="bloc-main">
       <a href="/">
-        <img alt="Square 50x50 black" src="https://cdn1.bloc.io/assets/logos/square-50x50-black-ccaccfb5011c3f2b18ee5afc37d86388.png">
-      </a></div>
+        <img alt="Square 50x50 black" src="/assets/logo-mobile.png">
+      </a>
+    </div>
     <div class="menu-button" ng_click="toggleMenu()" ng_hide="menuOpen"></div>
     <div class="menu-x icon fa fa-close ng-hide" ng_click="toggleMenu()" ng_hide="!menuOpen"></div>
   </div>
