Website and Social Media Data Entry.

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -106,7 +106,7 @@
   <div class="mobile-nav-header">
     <div class="bloc-main">
       <a href="/">
-        <img alt="Square 50x50 black" src="/assets/logo-mobile.png" width="50" height="50">
+        <img alt="Square 50x50 black" src="/assets/logo-mobile.png" >
       </a>
     </div>
     <div class="menu-button" ng_click="toggleMenu()" ng_hide="menuOpen"></div>
