Website and Social Media Data Entry.

--- a/app/views/proposals/_form.html.erb
+++ b/app/views/proposals/_form.html.erb
@@ -12,20 +12,12 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :jobid %><br />
-    <%= f.text_field :jobid %>
+    <%= f.label :title %><br />
+    <%= f.text_field :title %>
   </div>
   <div class="field">
     <%= f.label :content %><br />
     <%= f.text_field :content %>
-  </div>
-  <div class="field">
-    <%= f.label :createdat %><br />
-    <%= f.text_field :createdat %>
-  </div>
-  <div class="field">
-    <%= f.label :updatedat %><br />
-    <%= f.text_field :updatedat %>
   </div>
   <div class="actions">
     <%= f.submit %>
