Website and Social Media Data Entry.

--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -31,8 +31,8 @@
       <%= tinymce %>
     </div>
     <div class="field">
-      <%= f.label :linkto %><br/>
-      <%= f.text_field :linkto %>
+      <%= f.label :App %><br/>
+      <%= f.text_field :app %>
     </div>
     <div class="field">
       <%= f.label :startdate %><br/>
