--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -17,7 +17,7 @@
         </div>
       </div>
       <div class="panel-body">
-        <a href="/<%= @job.linkto %>">
+        <a href="/<%= @job.app %>">
         <input class="btn btn-info pull-right" type="button" value="Project Info">
         </a>
       </div>
