--- a/app/views/proposals/_form.html.erb
+++ b/app/views/proposals/_form.html.erb
@@ -1,3 +1,5 @@
+<%= tinymce_assets %>
+
 <%= form_for(@proposal) do |f| %>
   <% if @proposal.errors.any? %>
     <div id="error_explanation">
@@ -17,7 +19,8 @@
   </div>
   <div class="field">
     <%= f.label :content %><br />
-    <%= f.text_field :content %>
+    <%= f.text_area :content, :class => "tinymce", :rows => 40, :cols => 120 %>
+    <%= tinymce %>
   </div>
   <div class="actions">
     <%= f.submit %>
