--- a/app/views/proposals/show.html.erb
+++ b/app/views/proposals/show.html.erb
@@ -1,23 +1,13 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <b>Jobid:</b>
-  <%= @proposal.jobid %>
+  <b>title:</b>
+  <%= @proposal.title %>
 </p>
 
 <p>
   <b>Content:</b>
-  <%= @proposal.content %>
-</p>
-
-<p>
-  <b>Created-at:</b>
-  <%= @proposal.createdat %>
-</p>
-
-<p>
-  <b>Updated-at:</b>
-  <%= @proposal.updatedat %>
+  <%=raw @proposal.content %>
 </p>
 
 
