--- a/app/views/proposals/edit.html.erb
+++ b/app/views/proposals/edit.html.erb
@@ -1,6 +1,18 @@
-<h1>Editing proposal</h1>
+<div class="row">
+  <div class="container form_panel">
 
-<%= render 'form' %>
+<div class="panel panel-default form-bs">
+  <div class="panel-heading">
+    <h4>Editing proposal</h4>
+  </div>
+  <div class="panel-body">
+    <%= render 'form' %>
+  </div>
 
-<%= link_to 'Show', @proposal %> |
-<%= link_to 'Back', proposals_path %>
+  <%= link_to 'Show', @job %> |
+  <%= link_to 'Back', jobs_path %>
+</div>
+
+  </div>
+</div>
+
