--- a/app/views/jobs/edit.html.erb
+++ b/app/views/jobs/edit.html.erb
@@ -2,14 +2,21 @@
 
 <div class="row">
   <div class="container form_panel">
-    <h1>Editing job</h1>
-    </br>
-    <%= render 'form' %>
-    </br>
 
-    <%= link_to 'Show', @job %> |
-    <%= link_to 'Back', jobs_path %>
+    <div class="panel panel-info form-bs">
+      <div class="panel-heading">
+        <h4>Editing job</h4>
+      </div>
+      <div class="panel-body">
+        <%= render 'form' %>
+      </div>
+
+      <%= link_to 'Show', @job %> |
+      <%= link_to 'Back', jobs_path %>
+    </div>
 
   </div>
 </div>
+
+
 
