--- a/app/views/jobs/new.html.erb
+++ b/app/views/jobs/new.html.erb
@@ -1,11 +1,23 @@
+
 <div class="row">
   <div class="container form_panel">
-    <h1>New job</h1>
-    </br>
-    <%= render 'form' %>
-    </br>
-    <%= link_to 'Back', jobs_path %>
+
+    <div class="panel panel-info form-bs">
+      <div class="panel-heading">
+        <h4>New job</h4>
+      </div>
+      <div class="panel-body">
+        <%= render 'form' %>
+      </div>
+
+      <%= link_to 'Back', jobs_path %>
+    </div>
+
   </div>
 </div>
+
+
+
+
 
 
